fix: ajuste de erro de CORS e bean duplicado em security